objects/VoucherDefinition.object
<CustomObject>
    <fields>
        <fullName>StartingVoucherNumber__c</fullName>
        <description>The starting number for the numeric part of the voucher code.</description>
        <label>Starting Voucher Number</label>
        <precision>18</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>VoucherCodePrefix__c</fullName>
        <description>The prefix associated with the voucher code.</description>
        <label>Voucher Code Prefix</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>VoucherCodeSuffix__c</fullName>
        <description>The suffix associated with the voucher code.</description>
        <label>Voucher Code Suffix</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>All_VoucherDefinitions</fullName>
        <filterScope>Everything</filterScope>
        <label>allVoucherDefinitions</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>